--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,25 @@
-node_modules
+# dependencies
+/node_modules
+
+# production build
+/dist
+/build
+
+# local env files
+.env
+.env.local
+.env.*.local
+
+# IDE / OS files
+.vscode/
+.DS_Store
+Thumbs.db
+
+# logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Misc
+*.local
